--- a/geekshop/requirements.txt
+++ b/geekshop/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 Django==3.2.5
 django-debug-toolbar==3.2.1
 django-debug-toolbar-template-profiler==2.0.2
+django-extensions==3.1.3
 idna==2.10
 oauthlib==3.1.1
 Pillow==8.3.1
