--- a/geekshop/requirements.txt
+++ b/geekshop/requirements.txt
@@ -13,7 +13,9 @@ oauthlib==3.1.1
 Pillow==8.3.1
 psycopg2-binary==2.9.1
 pycparser==2.20
+pydotplus==2.0.2
 PyJWT==2.1.0
+pyparsing==2.4.7
 python-dotenv==0.18.0
 python3-openid==3.2.0
 pytz==2021.1
